/* 
  Localizable.strings
  ColorCalendar

  Created by Mariano Heredia on 12/21/16.
  Copyright © 2016 Kartjuba. All rights reserved.
*/
"button.PreviousMonth.AccessibilityLabel" = "Previous month";
"button.NextMonth.AccessibilityLabel" = "Next month";
"label.CurrentMonth.AccessibilityLabel" = "Current month";
"weekly.calendar.TitleFormat" = "Week of %@";
