...
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="692"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z8P-y4-1jv" customClass="ColorCalendarView" customModule="ColorCalendar">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" label="ColorCalendarView"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="z8P-y4-1jv" secondAttribute="height" multiplier="1:1" id="1Yn-jU-sqn"/>
                                </constraints>
                            </view>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="sBs-4b-fNf">
                                <rect key="frame" x="150" y="414" width="114" height="278"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pQb-ne-od5">
                                        <rect key="frame" x="0.0" y="0.0" width="114" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="Add random text"/>
                                        <state key="normal" title="Add random text"/>
                                        <connections>
                                            <action selector="onAddRandomTextTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Gj5-Pg-jOx"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Output" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UD4-QG-zNW">
                                        <rect key="frame" x="0.0" y="257.66666666666663" width="114" height="20.333333333333314"/>
                                        <accessibility key="accessibilityConfiguration" label="Output"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                        <variation key="heightClass=regular-widthClass=regular">
...
